--- a/product-service/package.json
+++ b/product-service/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "getproductslist",
+  "name": "product-service",
   "version": "1.0.0",
   "description": "Serverless aws-nodejs-typescript template",
   "main": "serverless.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy" : "sls deploy",
+    "start": "npx sls invoke local -f getProductsList --path src/functions/getProductsList/mock-event.json"
   },
   "engines": {
     "node": ">=14.15.0"
