--- a/product-service/package.json
+++ b/product-service/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "deploy": "sls deploy",
-    "start": "npx sls invoke local -f getProductsById --path src/functions/getProductsById/mock-event.json"
+    "start": "npx sls invoke local -f getProductsById --path src/functions/getProductsById/mock-event.json",
+    "create-products-table": "bash src/scripts/create-test-table.txt",
+    "check-products-table": "bash src/scripts/describe-test-table.txt"
   },
   "engines": {
     "node": ">=14.15.0"
