--- a/product-service/package.json
+++ b/product-service/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "deploy": "sls deploy",
-    "start": "npx sls invoke local -f getProductsList --path src/functions/getProductsList/mock-event.json",
+    "start": "npx sls invoke local -f getProductsById --path src/functions/getProductsById/mock-event.json",
     "create-products-table": "bash src/scripts/create-products-table.txt",
     "check-products-table": "bash src/scripts/describe-products-table.txt",
     "create-stocks-table": "bash src/scripts/create-stocks-table.txt",
@@ -25,6 +25,7 @@
     "aws-sdk": "^2.1354.0"
   },
   "devDependencies": {
+    "@aws-sdk/util-dynamodb": "^3.310.0",
     "@serverless/typescript": "^3.0.0",
     "@types/aws-lambda": "^8.10.71",
     "@types/node": "^14.14.25",
