--- a/product-service/package.json
+++ b/product-service/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "deploy": "sls deploy",
-    "start": "npx sls invoke local -f getProductsById --path src/functions/getProductsById/mock-event.json",
+    "start": "npx sls invoke local -f createProduct --path src/functions/createProduct/mock-event.json",
     "create-products-table": "bash src/scripts/create-products-table.txt",
     "check-products-table": "bash src/scripts/describe-products-table.txt",
     "create-stocks-table": "bash src/scripts/create-stocks-table.txt",
@@ -22,7 +22,8 @@
     "@middy/core": "^3.4.0",
     "@middy/http-cors": "^4.2.8",
     "@middy/http-json-body-parser": "^3.4.0",
-    "aws-sdk": "^2.1354.0"
+    "aws-sdk": "^2.1354.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@aws-sdk/util-dynamodb": "^3.310.0",
