--- a/import-service/package.json
+++ b/import-service/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.319.0",
+    "@aws-sdk/client-sqs": "^3.321.1",
     "@aws-sdk/credential-providers": "^3.319.0",
     "@aws-sdk/hash-node": "^3.310.0",
     "@aws-sdk/s3-request-presigner": "^3.319.0",
