--- a/product-service/package.json
+++ b/product-service/package.json
@@ -20,7 +20,9 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.310.0",
     "@aws-sdk/client-s3": "^3.315.0",
+    "@aws-sdk/client-sns": "^3.321.1",
     "@aws-sdk/client-sqs": "^3.321.1",
+    "@aws-sdk/credential-providers": "^3.325.0",
     "@middy/core": "^3.4.0",
     "@middy/http-cors": "^4.2.8",
     "@middy/http-json-body-parser": "^3.4.0",
