--- a/authorization-service/package.json
+++ b/authorization-service/package.json
@@ -1,25 +1,18 @@
 {
-  "name": "import-service",
+  "name": "authorization-service",
   "version": "1.0.0",
   "description": "Serverless aws-nodejs-typescript template",
   "main": "serverless.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy": "sls deploy"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
     "node": ">=14.15.0"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.319.0",
-    "@aws-sdk/client-sqs": "^3.321.1",
-    "@aws-sdk/credential-providers": "^3.319.0",
-    "@aws-sdk/hash-node": "^3.310.0",
-    "@aws-sdk/s3-request-presigner": "^3.319.0",
     "@middy/core": "^3.4.0",
-    "@middy/http-cors": "^4.3.1",
+    "@middy/http-cors": "^4.4.0",
     "@middy/http-json-body-parser": "^3.4.0",
-    "csv-parser": "^3.0.0",
     "serverless-dotenv-plugin": "^1.1.5"
   },
   "devDependencies": {
